# n8n-mcp

./: .env.example  .gitignore  README.md  pyproject.toml
src/n8n_mcp/: cli.py  embedding_client.py  load_to_postgres.py  main.py  n8n_api_client.py  postgres_client.py  server.py  vectorize_workflows.py  workflow_parser.py  workflow_validator.py
